syntax = "proto3";

package order;

import "common.proto";

option go_package = "../proto";

service OrderService {
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc ListCustomersOrders(ListCustomersOrdersRequest) returns (ListCustomersOrdersResponse);
    rpc ListAllOrders(ListAllOrdersRequest) returns (ListAllOrdersResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
    rpc GenerateNewPaymentUrl(GenerateNewPaymentUrlRequest) returns (GenerateNewPaymentUrlResponse);
}

message OrderItem {
    string product_id = 1;
    string product_name = 2;
    int32 quantity = 3;
    double price = 4;
}

message Order {
    string order_id = 1;
    string customer_id = 2;
    repeated OrderItem items = 3;
    string status = 4;
    optional string prescription_url = 5;
    double shipping_cost = 6;
    double subtotal = 7;
    int64 created_at = 8;
    int64 updated_at = 9;
}

message PlaceOrderRequest {
    string customer_id = 1;
    repeated OrderItem items = 2;
    optional string prescription_url = 3;
}

message PlaceOrderResponse {
    bool success = 1;
    string order_id = 2;
    string payment_url = 3;
    common.Error error = 4;
}

message GenerateNewPaymentUrlRequest {
    string order_id = 1;
    string customer_id = 2;
}

message GenerateNewPaymentUrlResponse {
    bool success = 1;
    string payment_url = 2;
    common.Error error = 3;
}

message GetOrderRequest {
    string order_id = 1;
    string customer_id = 2;
}

message GetOrderResponse {
    bool success = 1;
    string order_id = 2;
    string customer_id = 3;
    repeated OrderItem items = 4;
    string status = 5;
    optional string prescription_url = 6;
    double shipping_cost = 7;
    double subtotal = 8;
    int64 created_at = 9;
    int64 updated_at = 10;
    common.Error error = 11;
}

message ListCustomersOrdersRequest {
    string customer_id = 1;
    common.Filter filter = 2;
    string sort_by = 3;
    string sort_order = 4;
    int32 page = 5;
    int32 limit = 6;
}

message ListCustomersOrdersResponse {
    bool success = 1;
    repeated Order orders = 2;
    int32 total = 3;
    int32 page = 4;
    int32 limit = 5;
    common.Error error = 6;
}

message ListAllOrdersRequest {
    common.Filter filter = 1;
    string sort_by = 2;
    string sort_order = 3;
    int32 page = 4;
    int32 limit = 5;
}

message ListAllOrdersResponse {
    bool success = 1;
    repeated Order orders = 2;
    int32 total = 3;
    int32 page = 4;
    int32 limit = 5;
    common.Error error = 6;
}

message UpdateOrderStatusRequest {
    string order_id = 1;
    string customer_id = 2;
    string status = 3;
}

message UpdateOrderStatusResponse {
    bool success = 1;
    string message = 2;
    common.Error error = 3;
}
